src/features/PortfolioContent/Experience/Experience.scss
@import "../../PortfolioHeader/PortfolioHeader.scss/";
@import "../Certificate/Certificate.scss";

$work_experience_margin_top: 75px;

.portfolio-experience {
    position: relative;
    height: 100%;
    width: 100%;
    border: 1px solid green;
    overflow: hidden;

    .label-rotate {
        left: -55px;
        top: 30px;
        width: 200px;
    }

    .work-experience-years {
        position: absolute;
        top: 30px;
        right: 0;
        padding: 5px 20px;  
        font-size: x-small;
        color: green; 
    }

    .work-experience-container {
        position: relative;
        width: 100%;
        height: calc(100% - $work_experience_margin_top - 10px);
        padding-bottom: 10px;
        overflow-y: scroll;
        overflow-x: hidden;
        left: -7px;
        margin-top: $work_experience_margin_top;
    }
}

